ok, now i think we just need a few words about HERA.

--- a/ms.tex
+++ b/ms.tex
@@ -10,9 +10,10 @@
 \usepackage{array}
 \usepackage{appendix}
 \usepackage{comment}
-\usepackage{color}
+\usepackage{color,xcolor}
 \usepackage{url}
 \usepackage{hyperref}
+\hypersetup{colorlinks,linkcolor={blue!50!black},citecolor={blue!50!black},urlcolor={blue!50!black}}
 %\usepackage[dvipdfmx]{color}
 %\usepackage[dvipdfmx]{graphicx}
 
@@ -912,8 +913,8 @@ fractions $\lesssim2.5\%$ \citep{Stil2014} and slowly vary with time.
 Therefore both the circularly polarized nature of the emission from hot Jupiters 
 and the time variability (discussed in \S\ref{ss:timevariability}) partially mitigate 
 the source confusion limit, allowing hot jupiters, like other time-variable sources,
-to be detected below the imaging confusion limit.  Thus we expect not to be a strong
-limitation to detectability of hot jupiters.
+to be detected below the imaging confusion limit.  Thus we expect confusion not to be a 
+strong limitation to detectability of hot jupiters.
 
 % LOFAR
 The LOw-Frequency ARray (LOFAR) operates as two separate arrays defined by their 
