filename of cartoon figure is modified

--- a/ms.tex
+++ b/ms.tex
@@ -775,7 +775,7 @@ In this case, for example, extrapolating from the 0.4 mJy flux density of $\alph
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{figure*}[tbp]
-   \plotonesc{fig5_10Mj_2.pdf}
+   \plotonesc{cartoon_10Mj_2.pdf}
    \caption{A cartoon of radio emission spectra of a RGHJ with 10$M_J$ and the host red giants with 100 $R_{\odot }$.
 The spectrum of RGHJ is modeled after Jovian radio spectra, e.g. figure 8 of \citet{zarka_et_al2004} and figure 2 of \citet{griesmeier2007a}; contribution from Io is not shown here.
 The spectra of the host red giant are modeled simply by extrapolating observed radio spectra above 1~GHz with power law. }
