--- a/ms.tex
+++ b/ms.tex
@@ -64,6 +64,13 @@
 \def\lsim{\;\rlap{\lower 2.5pt
    \hbox{$\sim$}}\raise 1.5pt\hbox{$<$}\;}
 
+\newcommand{\Tcmb}{\mbox{$T_{\mbox{\tiny CMB}}$}}
+\newcommand{\Tsky}{\mbox{$T_{\mbox{\tiny sky}}$}}
+\newcommand{\Tsys}{\mbox{$T_{\mbox{\tiny sys}}$}}
+\newcommand{\Trx}{\mbox{$T_{\mbox{\tiny rx}}$}}
+\newcommand{\sigRMS}{\mbox{$\sigma_{\mbox{\tiny RMS}}$}}
+
+
 % set formatting properties
 \setlength{\textwidth}{6.5in}
 \setlength{\textheight}{8.8in}
@@ -310,7 +317,7 @@ under this model.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 Another ingredient needed for modeling the radio emission from the interaction between the planetary magnetic field and the stellar wind is the density and velocity of the stellar wind. 
-The number density of \memoTM{electrons in the (?)} stellar wind, $n$, can be expressed as
+The number density of electrons in the stellar wind, $n$, can be expressed as
 %%%%%%%%%% 
 \begin{equation}
 n = \frac{\dot M_\star}{4\pi a^2 m_p v}
@@ -474,7 +481,6 @@ P_{\rm radio} &\propto & P_{\rm inp} \\
 P_{\rm inp,\,k} &=& n v^3 r_s ^2 \label{eq:Pinp_kin}, \\
 P_{\rm inp,\,m} &=& v B_{\bot }^2 r_s ^2 \label{eq:Pinp_mag} \, ,
 \end{eqnarray}
-\memoTM{Some kind of plot of the typical ranges of these quantities might be useful/illustrative.}
 %%%
 where $ B_{\bot }$ is the interstellar magnetic field perpendicular to the stellar wind flow, and $r_s$ is the radius of the magnetic stand-off point. 
 %In the case of the Solar wind, the kinetic energy is dominant input energy over the magnetic one (the former is $\sim 400$ times larger than the latter).  
@@ -851,7 +857,7 @@ The difference of the symbols indicates whether the radio emission can escape fr
 \tablecaption{Detectability of Hot Jupiters with Current 
 and Future Radio Telescopes.\label{tab:sens}}
 \tablehead{
-Instrument & Band  & $\sigma_{\rm RMS}$\tablenotemark{a} & $\tau$\tablenotemark{b}  & Resolution & $\sigma_c$\tablenotemark{c}\\
+Instrument & Band  & \sigRMS\tablenotemark{a} & $\tau$\tablenotemark{b}  & Resolution & $\sigma_c$\tablenotemark{c}\\
            & (MHz) & ($\mu$Jy~hr$^{1/2}$)         &  (hr)                    & (\arcsec)  & ($\mu$Jy bm$^{-1}$)} 
 \startdata
 LOFAR-LBA  &  30-80  & 700   & 120000             & 8.3  & 42 \\ 
@@ -889,24 +895,24 @@ We consider in this section several current and near future radio observatories 
 The results are summarized in Table~\ref{tab:sens}. 
 
 The primary limitation to detectability is a telescope's sensitivity, characterized by the root mean square (RMS) noise fluctuations in the sky and receiver.
-The RMS noise ${\sigma}_{\rm RMS}$ in an interferometric observation with integration time $\tau$, bandwidth $\Delta \nu$, effective area $A_{\rm eff}$ ($\approx0.7 \pi (D/2)^2$ for interferometers comprising antennas with dish size $D$), and $N$ antennas is \citep[see e.g.][]{condon+ransom2016}
+The RMS noise \sigRMS\ in an interferometric observation with integration time $\tau$, bandwidth $\Delta \nu$, effective area $A_{\rm eff}$ ($\approx0.7 \pi (D/2)^2$ for interferometers comprising antennas with dish size $D$), and $N$ antennas is \citep[see e.g.][]{condon+ransom2016}
 %%%
 \begin{equation}
-\sigma_{\rm RMS} = \frac{2 k T_{\rm sys}}{A_{\rm eff} \, \sqrt{\Delta \nu \, \tau N (N-1)}} 
+\sigRMS = \frac{2 k T_{\rm sys}}{A_{\rm eff} \, \sqrt{\Delta \nu \, \tau N (N-1)}} 
 \left(\frac{\rm 10^{26} Jy}{\rm W m^{-2} Hz^{-1}}\right).
 \label{eq:rms_sens}
 \end{equation}
 %%%
-Here, $T_{\rm sys}$ is the blackbody temperature equivalent of the total system noise, which is the sum of the instrument or receiver noise temperature $T_{\rm rx}$ and the noise contribution from the sky $T_{\rm sky}$.
-We estimate $T_{\rm sky}$ using the low frequency sky noise temperature fit from \cite{Rogers+Bowman2008}:
+Here, \Tsys\ is the blackbody temperature equivalent of the total system noise, which is the sum of the instrument or receiver noise temperature \Trx\ and the noise contribution from the sky \Tsky.
+We estimate \Tsky\ using the low frequency sky noise temperature fit from \cite{Rogers+Bowman2008}:
 %%%
 \begin{equation}
-T_{\rm sky} = T_{150} \left( \frac{\nu}{150~\rm MHz}\right)^{-\beta} + T_{\rm CMB} 
+\Tsky = T_{150} \left( \frac{\nu}{150~\rm MHz}\right)^{-\beta} + \Tcmb 
 \end{equation}
 %%%
-where $T_{150} = 283.2~\rm K$ is the $T_{\rm sky}$ at 150~MHz, $\beta=2.47$, and $T_{\rm CMB} = 2.73~\rm K$ is the contribution from the cosmic microwave background (CMB).
+where $T_{150} = 283.2~\rm K$ is the \Tsky\ at 150~MHz, $\beta=2.47$, and $\Tcmb = 2.73~\rm K$ is the contribution from the cosmic microwave background (CMB).
 While this relation was fit to data taken in the 100-200~MHz range, the authors found it to be consistent with published measurements from 10-408~MHz. 
-%The $T_{\rm rx}$ is the receiver noise temperature, which depends on the instruments and is described below. 
+%The \Trx\ is the receiver noise temperature, which depends on the instruments and is described below. 
 
 An additional contribution to the noise is due to source confusion, the imaging noise associated with unresolved interloping radio sources in an observation.
 Source confusion is characterized by the standard deviation $\sigma_c$ in the surface brightness of an image due to one or more unresolved sources in the beam solid angle (for a review, see \cite{Condon1974,Condon2012}).
@@ -926,7 +932,7 @@ The LOw-Frequency ARray (LOFAR) operates as two separate arrays defined by their
 LOFAR-LBA operates in the 10-90~MHz range, and LOFAR-HBA operates in the 100-240~MHz range \citep{vanHaarlem2013}.
 We consider it as two separate instruments here.
 LOFAR-LBA's most sensitive band is centered at 60~MHz, and LOFAR-HBA's is at 150~MHz.
-Given the strong frequency dependence of the effective aperture of a dipole antenna, and that the system noise temperature $T_{\rm sys}$ for LOFAR is not fully determined by the sky noise $T_{\rm sky}$ (i.e.\ $T_{\rm rx} \sim T_{\rm sky}$), we use the LOFAR Image Noise calculator\footnote{Heald; \url{http://www.astron.nl/~heald/test/sens.php}}, which is based on {\it SKA Memo 113}\footnote{Nijboer, Pandey-Pommier, \& de Bruyn; \url{http://www.skatelescope.org/uploaded/59513\_113\_Memo\_Nijboer.pdf}}, for our fiducial sensitivity and imaging parameters in Table~\ref{tab:sens}.
+Given the strong frequency dependence of the effective aperture of a dipole antenna, and that the reciever noise temperature for LOFAR $\Trx \sim \Tsky$, we use the LOFAR Image Noise calculator\footnote{Heald; \url{http://www.astron.nl/~heald/test/sens.php}}, which is based on {\it SKA Memo 113}\footnote{Nijboer, Pandey-Pommier, \& de Bruyn; \url{http://www.skatelescope.org/uploaded/59513\_113\_Memo\_Nijboer.pdf}}, for our fiducial sensitivity and imaging parameters in Table~\ref{tab:sens}.
 
 % HERA
 The Hydrogen Epoch of Reionization Array (HERA\footnote{\url{http://reionization.org/}}) \ldots 
@@ -940,13 +946,13 @@ To be conservative, we use the GMRT online calculator.\footnote{\url{http://gmrt
 % SKA
 The low frequency component of the Square Kilometer Array (SKA), recently rebaselined to have 0.4~km$^2$ collecting area in 130,000 elements with baselines extending to 65~km, will operate from 50-350~MHz.\footnote{\url{https://www.skatelescope.org/news/worlds-largest-radio-telescope-near-construction/}}
 We estimate the noise in the lower half of the band ($\nu<200~\rm MHz$), appropriate for lower mass ($\lesssim 10 M_J$) separately from the full band, which could be used to detect $\sim 30 M_J$ hot Jupiters.
-We adopt the \cite{Rogers+Bowman2008} relation for $T_{\rm sys}$ as above, and assume $T_{\rm rx}\approx 60~\rm K$.
+We adopt the \cite{Rogers+Bowman2008} relation for \Tsys\ as above, and assume $\Trx \approx 60~\rm K$.
 We caution that these assumptions are optimistic, and the time estimates could in reality be a factor of a few worse.
 
 % VLA
-For the low frequency receivers (28-80~MHz; 4-Band) in the \memoDS{Long Wavelength Array (LWA) and the?} Very Large Array (VLA), the receiver noise temperature $T_{\rm rx}\approx 260~\rm K$ \citep{Hicks2012} and is subdominant to $T_{\rm sky}$ by at least -6~dB.
+For the low frequency receivers (28-80~MHz; 4-Band) in the \memoDS{Long Wavelength Array (LWA) and the?}\memoTM{No need to mention LWA here.  The receivers are the same in the VLA 4-band and the LWA, but the LWA is far too insensitive to consider here, as is VLA 4-band alone, so the reference just serves to place an upper limit on what \Trx\ will be for LOBO.} Very Large Array (VLA), the receiver noise temperature $\Trx \approx 260~\rm K$ \citep{Hicks2012} and is subdominant to \Tsky\ by at least -6~dB.
 Future upgrades to the VLA such as the LOw Band Observatory \citep[LOBO][]{Kassim2015IAU} are being considered, and would cover the full 30-470~MHz band.
-We estimate the sensitivity of LOBO assuming the receiver noise extrapolates linearly from $T_{\rm rx}\approx 60~\rm K$ (internal VLA memo) in P-Band (230-470~MHz) to $T_{\rm rx}\approx 260~\rm K$ in 4-band, and consider just the 50-350~MHz portion of the full 30-470~MHz band.
+We estimate the sensitivity of LOBO assuming the receiver noise extrapolates linearly from $\Trx \approx 60~\rm K$ (internal VLA memo) in P-Band (230-470~MHz) to $\Trx \approx 260~\rm K$ in 4-band, and consider just the 50-350~MHz portion of the full 30-470~MHz band.
 
 
 The estimates of the noises shown in Table \ref{tab:sens}, together with Figure \ref{fig:observability}, indicate that, at the frequency relevant to the radio emission from Jupiter-size planets, current instrument sensitivities are too low for detection.
