--- a/ms.tex
+++ b/ms.tex
@@ -733,7 +733,7 @@ Finally, \S\ref{ss:timevariability} discusses the expected time variability of t
 \label{ss:RGradio}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-The radio intensity of evolved stars in the range of 10~MHz and 1~GHz is not constrained through observation\memoYF{?}. 
+The radio intensity of evolved stars in the range of 10~MHz and 1~GHz is not constrained through observation. 
 Above 1~GHz, there are several observations.
 For example, \citet{gorman2013} reported $\alpha $ Boo ($R_\star = 25.4 R_{\odot }$, $T=4286$ K, $d=11.26$ pc) at 1~GHz is about 70 $\mu$Jy, and $\alpha $ Tau ($R_\star = 44.2  R_{\odot }$, $T=3,910$ K, $d=20.0$ pc) at 3~GHz is about 40 $\mu$Jy. 
 
