cartoon is smoothe

--- a/ms.tex
+++ b/ms.tex
@@ -354,7 +354,7 @@ Based on equations (\ref{eq:scale_Mdot}) and (\ref{eq:scale_v}), the number dens
 %%%%%%%%%% 
 \begin{eqnarray}
 n &=& 1.80 \times 10^6 \; {\rm cm^{-3}} \\
-&&\times \left( \frac{\dot M_\star}{10^{-8} M_{\odot }{\rm /yr}} \right) \left( \frac{v}{30\; {\rm km}} \right)^{-1} \left( \frac{a}{5 \; {\rm AU}} \right)^{-2} \label{eq:n_normalized}
+&&\times \left( \frac{\dot M_\star}{10^{-8} M_{\odot }{\rm /yr}} \right) \left( \frac{v}{30~\mbox{km/s}} \right)^{-1} \left( \frac{a}{5 \; {\rm AU}} \right)^{-2} \label{eq:n_normalized}
 \end{eqnarray}
 %%%%%%%%%% 
 
@@ -365,8 +365,8 @@ However, at this stage the velocity of stellar wind becomes slower than the esca
 Based on \citet{spiegel+madhusudhan2012}, the accretion luminosity $L_{\rm acc}$ and the temperature $T_{\rm acc}$ are: 
 %%%%%%%%%
 \begin{eqnarray}
-L_{\rm acc} \sim &&  10^{29} \; {\rm erg\;s}^{-1} \\
-&& \times \left( \frac{\dot M_*}{10^{-7} M_{\odot }\;{\rm yr}} \right) \left( \frac{M_p}{10 M_J} \right)^3 \left( \frac{M_*}{M_{\odot }} \right) \\
+L_{\rm acc} \sim &&  10^{28} \; {\rm erg\;s}^{-1} \\
+&& \times \left( \frac{\dot M_*}{10^{-8} M_{\odot }/{\rm yr}} \right) \left( \frac{M_p}{10 M_J} \right)^3 \left( \frac{M_*}{M_{\odot }} \right) \\
 %
 T_{\rm acc} \sim && 2 \times 10^6 \left( \frac{M_p}{10 M_J} \right)
 \end{eqnarray}
@@ -457,9 +457,10 @@ Therefore, combining Eq.~(\ref{eq:n}) and Eq.~(\ref{eq:fplasma}), we have
 %%%
 \begin{eqnarray}
 \label{eq:fplasmalos} f_{\rm plasma}^{\rm los} & \sim & 8.98 {\rm~kHz} \times \left( \frac{\dot M_\star}{4 \pi a^2 m_p v} \times 1\rm~cm^3 \right)^{1/2} \\
-\label{eq:fplasmalos_scaled} & = & 14.7{\rm~MHz} \times \left( \frac{a}{5~\mbox{AU}}\right)^{-1} \left(\frac{v}{0.1 v_{\odot}}  \right)^{-1/2} \notag \\
- & & \times \left( \frac{\dot M_\star}{10^6 \dot M_{\odot}}\right)^{1/2} \, .
+\label{eq:fplasmalos_scaled} & = & 14.7{\rm~MHz} \times \left( \frac{a}{5~\mbox{AU}}\right)^{-1} \left(\frac{v}{30~\mbox{km/s}}  \right)^{-1/2} \notag \\
+ & & \times \left( \frac{\dot M_\star}{10^{-8} M_{\odot }{\rm /yr}}\right)^{1/2} \, .
 \end{eqnarray}
+\memoYF{check numbers in above equation}
 %%%
 %where in Eq.~(\ref{eq:fplasmalos_scaled}) we have taken the solar mass-loss rate $\dot M_\odot$ to be $2.0 \times 10^{-14}~M_\odot$/yr and the typical solar wind velocity $v_{\odot }$ to be 400~km/sec.
 
@@ -518,7 +519,7 @@ By scaling this radius with equations (\ref{eq:n}) and (\ref{eq:stand-off}), the
 &=& r_{s,\,J} \left( \frac{B}{10~\mbox{G}} \right)^{1/3} \left( \frac{a}{5.2\mbox{AU}} \right)^{1/3}  \\
 && \times \left( \frac{\dot M_\star}{\dot M_\odot} \right)^{-1/6}  \left( \frac{\dot v}{v_{\odot }} \right)^{-1/6} \\
 \nonumber &=& 11.3 \, R_J \left( \frac{B}{10~\mbox{G}} \right)^{1/3}  \left( \frac{a}{5\mbox{AU}} \right)^{1/3} \\
-&& \times \left( \frac{\dot M_\star}{10^6 \dot M_\odot} \right)^{-1/6}  \left( \frac{\dot v}{10^{-1}v_{\odot }} \right)^{-1/6}
+&& \times \left( \frac{\dot M_\star}{10^{-8} M_{\odot }{\rm /yr}} \right)^{-1/6}  \left( \frac{\dot v}{10^{-1}v_{\odot }} \right)^{-1/6}
  \label{eq:stand-off-radius}
 \end{eqnarray}
 %%%
@@ -645,22 +646,22 @@ Combining the expressions above, we find that the radio spectral flux density ob
 %%%
 \begin{eqnarray}
 F_{\nu} &=& \frac{P_{\rm radio}}{\Omega d^2 f_{\rm cyc}} \\
-&\approx & 5.22\times 10^{-6} \mbox{Jy} \left( \frac{d}{10\mbox{~pc}} \right)^{-2}  \notag \\
+&\approx & 5.22\times 10^{-8} \mbox{Jy} \left( \frac{d}{100\mbox{~pc}} \right)^{-2}  \notag \\
 &&\times \left( \frac{B}{B_J} \right)^{-1/3}  \left( \frac{a}{5~\mbox{AU}} \right)^{-4/3} \notag \\
 && \times \left( \frac{\dot M_\star}{\dot M_{\odot}} \right)^{2/3} \left( \frac{v}{v_{\odot}} \right)^{5/3} \label{eq:F_nu} \\
 && \;\;\;\;\;\;\;\;\;\;\;\;\;\;\;\;\;\;\;\;\; \mbox{(for Jupier-twin)} \notag \\
 %%%
-&\approx & 1.12 \times 10^{-3} \mbox{Jy} \left( \frac{d}{10\mbox{~pc}} \right)^{-2}  \notag \\
+&\approx & 1.12 \times 10^{-5} \mbox{Jy} \left( \frac{d}{100\mbox{~pc}} \right)^{-2}  \notag \\
 &&\times \left( \frac{B}{B_J} \right)^{-1/3} \left( \frac{a}{5~\mbox{AU}} \right)^{-4/3} \notag \\ 
 && \times \left( \frac{\dot M_\star}{10^6 \dot M_{\odot}} \right)^{2/3} \left( \frac{v}{10^{-1} v_{\odot}} \right)^{5/3} \label{eq:F_nu_RGHJ} \\
 && \;\;\;\;\;\;\;\;\;\;\;\;\;\;\;\;\;\;\;\;\; \mbox{(for RGB stars' companions)} \notag \\
 %%%
-&\approx & 1.12 \times 10^{-1} \mbox{Jy} \left( \frac{d}{10\mbox{~pc}} \right)^{-2}  \notag \\
+&\approx & 1.12 \times 10^{-3} \mbox{Jy} \left( \frac{d}{100\mbox{~pc}} \right)^{-2}  \notag \\
 &&\times \left( \frac{B}{B_J} \right)^{-1/3} \left( \frac{a}{5~\mbox{AU}} \right)^{-4/3} \notag \\ 
 && \times \left( \frac{\dot M_\star}{10^9 \dot M_{\odot}} \right)^{2/3} \left( \frac{v}{10^{-1} v_{\odot}} \right)^{5/3} \label{eq:F_nu_AGB} \\
 && \;\;\;\;\;\;\;\;\;\;\;\;\;\;\;\;\;\;\;\;\; \mbox{(for AGB stars' companions)} \notag \\
 %%%
-&\approx & 2.42 \times 10^{-3} \mbox{Jy} \left( \frac{d}{10\mbox{~pc}} \right)^{-2}  \notag \\
+&\approx & 2.42 \times 10^{-5} \mbox{Jy} \left( \frac{d}{100\mbox{~pc}} \right)^{-2}  \notag \\
 &&\times \left( \frac{B}{B_J} \right)^{-1/3} \left( \frac{a}{0.05~\mbox{AU}} \right)^{-4/3} \notag \\ 
 && \times \left( \frac{\dot M_\star}{\dot M_{\odot}} \right)^{2/3} \left( \frac{v}{v_{\odot}} \right)^{5/3} \label{eq:F_nu_RGHJs} \\
 && \;\;\;\;\;\;\;\;\;\;\;\;\;\;\;\;\;\;\;\;\; \mbox{(for canonical hot jupiters)} \notag 
@@ -668,7 +669,8 @@ F_{\nu} &=& \frac{P_{\rm radio}}{\Omega d^2 f_{\rm cyc}} \\
 %%% 
 %\memoYF{cite original paper!}. 
 Thus, RGHJs are expected to be intrinsically as bright as the closest hot Jupiters, and Jupiter-like planets around AGB stars are potentially orders-of-magnitude brighter than them. 
-Note that, within this framework, the {\it spectral} radio flux has  necessarily negative correlation with the planetary magnetic field, as pointed out by \citet{griesmeier2005}. 
+Note that, within this framework, the {\it spectral} radio flux has necessarily negative correlation with the planetary magnetic field, as pointed out by \citet{griesmeier2005}. 
+Equation (\ref{eq:F_nu_RGHJ}) gives the value which is by factor smaller than the prediction of equation (5) in \citet{ignace2010} in the case of $\eta = 1$. This originates from the different scaling laws for the planetary magnetic field and that their paper didn't incorporate the compression of the planetary magnetosphere due to massive stellar wind. 
 
 Using the model for planetary magnetic field strength, we may consider the  radio spectral intensity and maximum frequency of given planetary mass and age. 
 Figure \ref{fig:radio} shows the contours of spectral radio flux of planetary companions at 4.5~Gyr with varying masses and orbital distances. 
@@ -777,8 +779,8 @@ However, assuming thermal Bremsstrahlung emission continues to dominate in this 
 Using these data, we extrapolate the radio flux from the host star to the lower frequency range with a simple power law as follows:
 %%%
 \begin{eqnarray}
-\nonumber f_{\star }(\nu ) &\sim & (0.4-1.4) \times 10^{-3} ~\mbox{Jy} \\
-&& \times \left( \frac{d}{10 ~\mbox{pc}} \right)^{-2}  \left( \frac{R_{\star }}{100 R_{\odot }} \right)^2 \left( \frac{\nu}{1~\mbox{GHz}} \right)^{\alpha } 
+\nonumber f_{\star }(\nu ) &\sim & (0.4-1.4) \times 10^{-5} ~\mbox{Jy} \\
+&& \times \left( \frac{d}{100 ~\mbox{pc}} \right)^{-2}  \left( \frac{R_{\star }}{100 ~R_{\odot }} \right)^2 \left( \frac{\nu}{1~\mbox{GHz}} \right)^{\alpha } 
 \end{eqnarray}
 %%%
 where the power index $\alpha $ is order of unity. 
@@ -792,7 +794,7 @@ For less massive planets (with weaker magnetic fields), the distinction is even 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{figure*}[tbp]
-   \plotonesc{cartoon_10Mj_2.pdf}
+   \plotonesc{cartoon_10Mj_100pc_smooth.pdf}
    \caption{A cartoon of radio emission spectra of a RGHJ with 10$M_J$ and the host red giants with 100 $R_{\odot }$.
 The spectrum of RGHJ is modeled after Jovian radio spectra, e.g. figure 8 of \citet{zarka_et_al2004} and figure 2 of \citet{griesmeier2007a}; contribution from Io is not shown here.
 The spectra of the host red giant are modeled simply by extrapolating observed radio spectra above 1~GHz with power law. }
