christensen2009 => christensen_et_al_2009

--- a/ms.tex
+++ b/ms.tex
@@ -190,7 +190,7 @@ Extrapolating this scaling to exoplanets, radio emission from exoplanetary syste
 \citet{griesmeier2005} took account of the high stellar activity in the early stage of the planetary system and proposed that the young system would be good candidates to search for radio emission. 
 \citet{griesmeier2007a, griesmeier2007b} discussed the effects of the detailed model of stellar wind property in the proximity of the stars. They considered not only the kinetic energy of the stellar wind but also the magnetic energy of the stellar wind and coronal mass ejection (CME). 
 Note that in these paperes, the scaling relation of planetary magnetic fields  differ from paper to paper.    
-In \citet{reiners2010}, the authors adopted new scaling relation of planetary magnetic field based on \citet{christensen2009}.
+In \citet{reiners2010}, the authors adopted new scaling relation of planetary magnetic field based on \citet{christensen_et_al2009}.
 \citet{jardine2008} modeled the reconnection between the magnetic fields of close-in planets and of the star, which would accelerate electrons and produce radio emission.  
 Although observational searches for these radio signatures are underway, no clear detection has been claimed \citep{bastian2000,george2007,stroe2012,hallinan2013,murphy2015}, 
 though there are some promising initial results \citep{lecavelier_et_al2013,sirothia2014}. 
